tg-4704 [P2]  Cuando se carga un problema a un paciente y este problema contiene una coma, genera dos diagnósticos

--- a/back-end/hospital-api/src/main/resources/templates/fragments/form_report.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/form_report.html
@@ -252,7 +252,7 @@
         <div class="code">17. CÓDIGO</div>
     </div>
     <div th:if="${problems != null}">
-        <div class="row-data" th:each="problem, iter: ${#strings.arraySplit(problems,',')}" th:style="${iter.index == 0 ? 'margin-top: 0px' : 'margin-top:5px'}" >
+        <div class="row-data" th:each="problem, iter: ${#strings.arraySplit(problems,'|')}" th:style="${iter.index == 0 ? 'margin-top: 0px' : 'margin-top:5px'}" >
             <div class="diagnosis" th:text="${#strings.capitalize(problem)}"></div>
             <div class="code">&nbsp;</div>
         </div>
