tg-4705 [P2] Al descargar formulario V si no se encuentra el dato especialidad se visualiza null

--- a/back-end/hospital-api/src/main/resources/templates/fragments/annex_report.html
+++ b/back-end/hospital-api/src/main/resources/templates/fragments/annex_report.html
@@ -267,7 +267,10 @@
                 <label th:if="${appointmentState == 'Atendido' || (existsConsultation != null && existsConsultation)}">X</label>
                 <label th:unless="${appointmentState == 'Atendido' || (existsConsultation != null && existsConsultation)}">&nbsp;</label>
             </div>
-            <div class="specialty" th:text="${'Especialidad:  ' + specialty}"></div>
+            <div class="specialty" >
+                <label th:if="${specialty != null}" th:text="${'Especialidad:  ' + specialty}"></label>
+                <label th:unless="${specialty != null}" th:text="${'Especialidad:  '}">&nbsp;</label>
+            </div>
         </div>
         <div>
             <div class="practice">PRÁCTICA</div>
