tg-4710. [FE] Se debe ver pestaña aplicar vacuna si FF de boton.consulta esta habilitado

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacuna/agregar-vacuna.component.html
@@ -9,7 +9,7 @@
 
 	<mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedTab" (selectedIndexChange)="setSelectedTab($event)">
 		<ng-container *appHasRole="['ENFERMERO']">
-			<ng-container *ngIf="hasConfirmedAppointment">
+			<ng-container *ngIf="this.data.hasConfirmedAppointment">
 				<mat-tab>
 					<ng-template mat-tab-label>
 						<span class="color-primary">
