--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacunas/agregar-vacunas.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/agregar-vacunas/agregar-vacunas.component.scss
@@ -14,6 +14,9 @@ div.spinner {
     background-color: #2687C533;
     color: #2687C5;
 }
+.date {
+    padding: 5px;
+}
 .margin-top {
     margin-top: 10px;
 }
