tg-4748 [FE] Estilos para el odontograma

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth/tooth.component.html
@@ -1,4 +1,4 @@
-<div id="svg" #svg fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="padding: 10px;">
+<div id="svg" #svg fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" class="tooth">
 	<svg width="40" height="68" viewBox="0 0 40 68" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<g clip-path="url(#clip0)">
 			<path id="left" fill="white"
